created C++ class in patrol.cpp file

--- a/robot_patrol/CMakeLists.txt
+++ b/robot_patrol/CMakeLists.txt
@@ -23,4 +23,9 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+add_executable(patrol src/patrol.cpp)
+ament_target_dependencies(patrol rclcpp sensor_msgs geometry_msgs)
+install(TARGETS patrol DESTINATION lib/${PROJECT_NAME})
+
+
 ament_package()
