--- a/robot_patrol/CMakeLists.txt
+++ b/robot_patrol/CMakeLists.txt
@@ -27,5 +27,9 @@ add_executable(patrol src/patrol.cpp)
 ament_target_dependencies(patrol rclcpp sensor_msgs geometry_msgs)
 install(TARGETS patrol DESTINATION lib/${PROJECT_NAME})
 
+install(DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 
 ament_package()
